--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,3 +48,19 @@ input:focus , textarea:focus {
 textarea {
   height: 100px;
 }
+
+.floating-image {
+  animation: float 3s ease-in-out infinite; 
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0); 
+  }
+  50% {
+    transform: translateY(-20px); 
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
